# global-impact-tracker

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  pyproject.toml  requirements.txt  server.py
.github/workflows/: ci.yml  publish.yml
core/: README.md  config.py  dashboard.py  entitlements.py  live_impact_dashboard.html  tracker.py
mcp/: server.py
proxy/: .dockerignore  DEPLOY.md  main.py
proxy/tests/: conftest.py  test_auth.py  test_gemini_endpoint.py  test_huggingface_endpoint.py
specs/: mission.md  roadmap.md  tech-stack.md
specs/2026-04-22-hmac-licensing/: plan.md  requirements.md  validation.md
specs/2026-04-28-reflection-hardening/: plan.md  requirements.md  validation.md
specs/2026-04-28-repo-split/: plan.md  requirements.md  validation.md
specs/2026-05-01-packaging-and-polish/: plan.md  requirements.md  validation.md
specs/2026-05-04-ci-cd-pipeline/: plan.md  requirements.md  validation.md
specs/2026-05-04-gemini-proxy/: plan.md  requirements.md  validation.md
src/global_impact_tracker/: __init__.py  __main__.py  config.py  dashboard.py  entitlements.py  tracker.py
tests/: conftest.py  test_entitlements.py  test_mcp_licensing.py  test_public_cli.py  test_security.py  test_tracker_fields.py
tools/: generate_key.py
