[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "global-impact-tracker"
version = "0.1.0"
description = "Local-first CLI for tracking AI-assisted work impact."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
impact-tracker = "global_impact_tracker.tracker:main"
impact-dashboard = "global_impact_tracker.dashboard:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
